added mode selection

--- a/index.html
+++ b/index.html
@@ -43,6 +43,21 @@
                 </div>
             </div>
             
+            <!-- Color selection for single player mode -->
+            <div id="color-selection" class="color-selection" style="display: none;">
+                <h3 class="color-selection-title">Choose your side</h3>
+                <div class="color-options">
+                    <div class="color-option" id="play-as-white">
+                        <div class="color-piece white-king">♔</div>
+                        <span>Play as White</span>
+                    </div>
+                    <div class="color-option" id="play-as-black">
+                        <div class="color-piece black-king">♚</div>
+                        <span>Play as Black</span>
+                    </div>
+                </div>
+            </div>
+            
             <div class="mode-footer">
                 <button id="start-game-button" disabled>Start Game</button>
             </div>
